# ch-example

./: .gitignore  README.md
app/: config.yml  init.py  pyproject.toml  query_examples.sql  script.py
docker/: docker-compose.yml
docker/clickhouse/sql/: init.sql
