[tool.poetry]
name = "ch-example"
version = "0.0.1"
description = "Пример приложения по работе с ClickHouse"
authors = ["Андрей Романов"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
clickhouse-driver = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
